--- a/client/index.html
+++ b/client/index.html
@@ -61,8 +61,10 @@
         <!-- build:js({.tmp,client}) app/app.js -->
         <script src="app/app.js"></script>
           <!-- injector:js -->
-          <script src="app/login/login.controller.js"></script>
-          <script src="app/login/login.js"></script>
+          <script src="app/Storage/storage.service.js"></script>
+          <script src="app/auth/auth.controller.js"></script>
+          <script src="app/auth/auth.js"></script>
+          <script src="app/auth/auth.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
