add/edit customers

--- a/client/index.html
+++ b/client/index.html
@@ -65,6 +65,9 @@
           <script src="app/auth/auth.controller.js"></script>
           <script src="app/auth/auth.js"></script>
           <script src="app/auth/auth.service.js"></script>
+          <script src="app/customers/customerModal.controller.js"></script>
+          <script src="app/customers/customers.controller.js"></script>
+          <script src="app/customers/customers.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
