new order, typeahead customer

--- a/client/index.html
+++ b/client/index.html
@@ -73,6 +73,9 @@
           <script src="app/customers/customers.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/orders/orders.controller.js"></script>
+          <script src="app/orders/orders.js"></script>
+          <script src="app/orders/orderModal.controller.js"></script>
           <script src="app/products/productModal.controller.js"></script>
           <script src="app/products/products.controller.js"></script>
           <script src="app/products/products.js"></script>
