--- a/client/index.html
+++ b/client/index.html
@@ -68,6 +68,9 @@
           <script src="app/auth/auth.controller.js"></script>
           <script src="app/auth/auth.js"></script>
           <script src="app/auth/auth.service.js"></script>
+          <script src="app/customerTypes/addCustomerTypeModal.controller.js"></script>
+          <script src="app/customerTypes/customerTypes.controller.js"></script>
+          <script src="app/customerTypes/customerTypes.js"></script>
           <script src="app/customers/customerModal.controller.js"></script>
           <script src="app/customers/customers.controller.js"></script>
           <script src="app/customers/customers.js"></script>
@@ -76,6 +79,9 @@
           <script src="app/orders/orderModal.controller.js"></script>
           <script src="app/orders/orders.controller.js"></script>
           <script src="app/orders/orders.js"></script>
+          <script src="app/productVariants/productVariants.controller.js"></script>
+          <script src="app/productVariants/productVariants.js"></script>
+          <script src="app/productVariants/productVariantsQuickAdd.controller.js"></script>
           <script src="app/products/productModal.controller.js"></script>
           <script src="app/products/products.controller.js"></script>
           <script src="app/products/products.js"></script>
