--- a/client/app/customers/customerModal.html
+++ b/client/app/customers/customerModal.html
@@ -18,6 +18,7 @@
           <select name="customerTypes" id="customerTypes" class="form-control"
                   ng-options="type.id as type.name for type in customerTypes" ng-model="customer.customer_type_id"></select>
         </div>
+        <a ng-click="addCustomerType()">Add New Customer Type</a>
       </div>
     </div>
     <div class="form-group">
