customer page, dashboard

--- a/client/app/customers/customers.html
+++ b/client/app/customers/customers.html
@@ -10,8 +10,8 @@
         <th>Account ID</th>
       </thead>
       <tbody>
-        <tr ng-repeat="customer in customers" ng-click="openModal(customer)" class="customer-tr">
-          <td>{{customer.name}}</td>
+        <tr ng-repeat="customer in customers"  class="customer-tr">
+          <td><a ng-href="/customers/{{customer.id}}">{{customer.name}}</a></td>
           <td>{{customer.website}}</td>
           <td>{{customer.notes}}</td>
           <td>{{customer.account_id}}</td>
