--- a/client/index.html
+++ b/client/index.html
@@ -71,9 +71,11 @@
           <script src="app/customerTypes/addCustomerTypeModal.controller.js"></script>
           <script src="app/customerTypes/customerTypes.controller.js"></script>
           <script src="app/customerTypes/customerTypes.js"></script>
+          <script src="app/customers/customer.controller.js"></script>
           <script src="app/customers/customerModal.controller.js"></script>
           <script src="app/customers/customers.controller.js"></script>
           <script src="app/customers/customers.js"></script>
+          <script src="app/customers/dashboard/customerDashboard.controller.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/orders/orderModal.controller.js"></script>
