--- a/client/app/customers/customer.html
+++ b/client/app/customers/customer.html
@@ -5,7 +5,7 @@
     <ul class="nav nav-pills">
       <li><a href="/customers/{{customer.id}}/dashboard">Dashboard</a></li>
       <li><a href="#">Info</a></li>
-      <li><a href="#">Orders</a></li>
+      <li><a ui-sref="customer.orders({customerId: customer.id})">Orders</a></li>
       <li><a href="#">Contacts</a></li>
       <li><a href="#">Addresses</a></li>
       <li><a href="#">Products</a></li>
