--- a/client/index.html
+++ b/client/index.html
@@ -76,6 +76,7 @@
           <script src="app/customers/customers.controller.js"></script>
           <script src="app/customers/customers.js"></script>
           <script src="app/customers/dashboard/customerDashboard.controller.js"></script>
+          <script src="app/customers/orders/customerOrders.controllers.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/orders/orderModal.controller.js"></script>
