--- a/client/app/auth/login.html
+++ b/client/app/auth/login.html
@@ -1,6 +1,7 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
 <form name="loginForm" novalidate>
+  <div class="alert alert-error alert-dismissable" ng-if="loginError.length">{{loginError}}</div>
   <div class="form-group">
     <label for="userEmail">Email</label>
     <input type="text" id="userEmail" class="form-control" ng-model="user.email">
