--- a/client/index.html
+++ b/client/index.html
@@ -57,6 +57,8 @@
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/ng-tags-input/ng-tags-input.min.js"></script>
+      <script src="bower_components/flow.js/dist/flow.js"></script>
+      <script src="bower_components/ng-flow/dist/ng-flow.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
@@ -92,6 +94,7 @@
           <script src="app/ptoProductSelect/ptoProductSelect.directive.js"></script>
           <script src="app/taginator/taginator.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
+          <script src="components/secondaryNavbar/secondaryNavbar.controller.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
 </body>
