--- a/client/app/customers/customers.html
+++ b/client/app/customers/customers.html
@@ -1,22 +1,28 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 <div class="container">
   <div class="col-md-12">
-    <a ng-click="openModal()" class="btn btn-primary pull-right">New Customer</a>
-    <table class="table table-hover">
-      <thead>
-        <th>Name</th>
-        <th>Website</th>
-        <th>Notes</th>
-        <th>Account ID</th>
-      </thead>
-      <tbody>
-        <tr ng-repeat="customer in customers"  class="customer-tr">
-          <td><a ng-href="/customers/{{customer.id}}">{{customer.name}}</a></td>
-          <td>{{customer.website}}</td>
-          <td>{{customer.notes}}</td>
-          <td>{{customer.account_id}}</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="row">
+      <a ng-click="openModal()" class="btn btn-primary pull-right">New Customer</a>
+    </div>
+    <div class="row">
+      <div class="card">
+        <table class="table table-hover">
+          <thead>
+            <th>Name</th>
+            <th>Website</th>
+            <th>Notes</th>
+            <th>Account ID</th>
+          </thead>
+          <tbody>
+            <tr ng-repeat="customer in customers"  class="customer-tr">
+              <td><a ng-href="/customers/{{customer.id}}">{{customer.name}}</a></td>
+              <td>{{customer.website}}</td>
+              <td>{{customer.notes}}</td>
+              <td>{{customer.account_id}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
 </div>
