--- a/client/app/products/productModal.html
+++ b/client/app/products/productModal.html
@@ -17,6 +17,22 @@
       <label for="productDescription">Description</label>
       <textarea name="notes" id="productDescription" rows="3" class="form-control" ng-model="product.description"></textarea>
     </div>
+    <div flow-init
+         flow-file-added="onImageAdded($file, $event, $flow)"
+         flow-file-success="$file.msg = $message">
+
+      <!-- <input type="file" flow-btn/> -->
+      Input OR Other element as upload button
+      <span class="btn btn-primary" flow-btn>Upload File</span>
+
+      <table>
+        <tr ng-repeat="file in $flow.files">
+            <td>{{$index+1}}</td>
+            <td>{{file.name}}</td>
+            <td>{{file.msg}}</td>
+        </tr>
+      </table>
+    </div>
     <div class="form-group">
       <input type="checkbox" class="form-control" id="productHasVariants" ng-model="product.hasVariants" ng-checked="product.variants.length" ng-disabled="product.variants.length">
       <label for="productHasVariants">This product has variants.</label>
